# CNRS_DS

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  Config.cmake.in
include/: calculate_alpha.h  nominal_DS.h  sample_DS.h
include/cnrs_ds/: calculate_alpha.h  modulated_DS.h  nominal_DS.h
src/: calculate_alpha.cpp  main.cpp  modulated_DS.cpp  nominal_DS.cpp
